--- a/_index.html
+++ b/_index.html
@@ -1,5 +1,4 @@
 <html>
-<html lang="ja">
   <head>
     <meta charset="utf-8">
     <title>TestApp</title>
@@ -44,11 +43,8 @@
     <!-- スタイルシート(CSS)読み込み -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- JavaScript読み込み -->
-<!--     <script src="./clock.js" charset="UTF-8"></script> -->
-         <script type="text/javascript" src="./word.js" charset="UTF-8"></script>
-         <script type="text/javascript" src="./calc.js" charset="UTF-8"></script>
-<!--    <script src="./word.js" charset="UTF-8"</script> -->
-<!--    <script src="./calc.js" charset="UTF-8"></script> -->
+<!--     <script src="./clock.js"></script> -->
+    <script src="./calc.js"></script>
 
 <style type="text/css">
 
@@ -58,70 +54,66 @@
 
   </head>
   <body>
-
-
  <script src="./count.js"></script>
+<!--     <h1>TestApp</h1>         -->
+<!--     <img src="logo.svg">     -->
+
+    <!-- 時計枠 -->
+<!--     <div id="clock_frame">         -->
+        <!-- 日付部分 -->
+<!--    <span id="clock_date"></span>   -->
+        <!-- 時刻部分 -->
+<!--    <span id="clock_time"></span>   -->
+<!--</div>-->
     
     <div>&nbsp;</div>
     <p></p>
-<!-- <form id="radioGroup" onclick="onClickChk()"> -->
-<form id="radioGroup">
-  <label> <input type="radio" class="my-radio" name="chk" value="0" checked />No Lv </label>
-  <label> <input type="radio" class="my-radio" name="chk" value="1" />みどり </label>
-  <label> <input type="radio" class="my-radio" name="chk" value="2" />あお </label>
-  <label> <input type="radio" class="my-radio" name="chk" value="3" />きいろ </label>
-  <label> <input type="radio" class="my-radio" name="chk" value="4" />あか </label>
-</form>
-
     <!-- 計算式 -->
-    <div id="word">
+    <div id="formula">
+        <div>&nbsp;</div>
+        <div id="fm_no0"></div>
+        <div id="fm_no1"></div>
+        <div id="fm_no2"></div>
+        <div id="fm_no3"></div>
+        <div id="fm_no4"></div>
+        <div id="fm_no5"></div>
+        <div id="fm_no6"></div>
+        <div id="fm_no7"></div>
+        <div id="fm_no8"></div>
+        <div id="fm_no9"></div>
+        <div>&nbsp;</div>
+    </div>
+    <p></p>
 
-    	<div id="formula">
-        	<div>&nbsp;</div>
-        	<div id="fm_no0"></div>
-        	<div>&nbsp;</div>
-    	</div>
-
-	    <!-- x = ? -->
-    	<div id="answer">
-        	<div id="ans_no0" onclick="onClickAns(0)">x = ?</div>
-        	<div>&nbsp;</div>
-    	</div>
+    <!-- x = ? -->
+    <div id="answer">
+        <div>&nbsp;</div>
+        <div id="ans_no0" onclick="onClickAns(0)">x = ?</div>
+        <div id="ans_no1" onclick="onClickAns(1)">x = ?</div>
+        <div id="ans_no2" onclick="onClickAns(2)">x = ?</div>
+        <div id="ans_no3" onclick="onClickAns(3)">x = ?</div>
+        <div id="ans_no4" onclick="onClickAns(4)">x = ?</div>
+        <div id="ans_no5" onclick="onClickAns(5)">x = ?</div>
+        <div id="ans_no6" onclick="onClickAns(6)">x = ?</div>
+        <div id="ans_no7" onclick="onClickAns(7)">x = ?</div>
+        <div id="ans_no8" onclick="onClickAns(8)">x = ?</div>
+        <div id="ans_no9" onclick="onClickAns(9)">x = ?</div>
+        <div>&nbsp;</div>
     </div>
 
 
     <p></p>
     <!-- ボタン -->
-    <!--    <div id="next" onclick="onClickNext()">&nbsp;Next&nbsp; </div>-->
-    <div id="next" >&nbsp;Next&nbsp; </div>
+    <div id="next" onclick="onClickNext()">&nbsp;Next&nbsp; </div>
     <p></p>
-
-    <p></p>
-
+    <div class="wrapper">
         <div id="countDisplay" class="count-display">0</div>
-	<br>
-<br>
-<p></p>
-
-<table>
-<tr>
-<td><button id="btn1" >　　　</button></td>
-<td><button id="btn2" >　　　</button></td>
-<td><button id="btn3" >　　　</button></td>
-<td><button id="btn4" >　　　</button></td>
-
-</tr>
-</table>
-
-
-<!--            <div class="btns">-->
-<!--                <button id="btn1" class="btn">btn1</button>-->
-<!--                <button id="btn2" class="btn">btn2</button>-->
-<!--                <button id="btn3" class="btn">btn3</button>-->
-<!--                <button id="btn4" class="btn">btn4</button>-->
-<!--            </div>-->
+        <div class="btns">
+            <button id="countDown" class="btn">up</button>
+            <button id="countUp" class="btn">down</button>
+        </div>
         <button id="countReset"  class="reset">reset</button>
-
+    </div>
 <script>
 
 //
